welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not enough arguments for constructor Array: (_length: Int)Array[java.awt.Color].
Unspecified value parameter _length.
var tab = new Array[Color]()
          ^